			     BZFlag Release Notes
			     ====================

BZFlag 1.12.0  (was 1.11.x)
---------------------------
* bzfs can now announce to multiple public list servers - Sean Morrison
* Add shared public server bans via a master ban list - Jeff Meyers and..
	 - Alfredo Tupone, Daniel Remenak, Sean Morrison, Bryan Jennings
* Linux event device joystick and force feedback support - Micah Dowty
* Inform users when they are banned on login, and send the ban reason,
	ban originator, and source of the ban to the client - Jeff Myers
* Added the SHORTBAN bzfs priviledge - Dave Rodgers, Daniel Leeds
* Added /date and /time to request server date and time - Ian Agar
* Added arc, cone, and sphere map objects - Dave Rodgers
* Added user specified dynamic colors - Dave Rodgers
* Added user specified texture matrices - Dave Rodgers
* Improved BSP splitting algorithm - Dave Rodgers
* Added /part command for disconnecting from server - bzgirl
* Show status while trying to connect & download world - Daniel Remenak
* Update old configs to avoid broken keybindings - Daniel Remenak
* Config files are stored per-version, using older when needed - Jeff Myers
* Faster tank and shot collision detection using an octree - Dave Rodgers
* Better linewrapping for control panel - Daniel Remenak
* Configurable font size for control panel and scoreboard - Daniel Remenak
* Textures are now reloaded on a mode change for optimal quality - Jeff Myers
* Automatic team joins changed to encourage team-play - Alfredo Tupone
* Fixed dropping flag while jumping from high places - Alfredo Tupone
* Lag stats are now sorted by lag value - Alfredo Tupone
* OpenGL context reloading bug fixed on SDL - Alfredo Tupone
* Roaming switch between player is now consistent - Alfredo Tupone
* Compensating jitter in Dead reckoning - Alfredo Tupone
* Ping packet loss are like high lag for warn/kick - Alfredo Tupone
* ColorBlindness now disable hunt flashing on radar - Alfredo Tupone